@@ -10,8 +10,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -19,8 +19,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed2() {
-        List<String> input = Arrays.asList("k1/sk1", "k1/sk1", "k1/sk1/ssk1", "k2/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1", "k2", "k2/sk1");
+        List<String> input = List.of("k1/sk1", "k1/sk1", "k1/sk1/ssk1", "k2/sk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -28,8 +28,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -37,8 +37,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1", "k2/sk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k1/sk1/ssk1", "k2/sk1");
+        List<String> expect = List.of("k2", "k2/sk1", "k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
@@ -46,8 +46,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc2() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1", "k1/sk1/ssk2", "k2/sk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2");
+        List<String> input = List.of("k1/sk1/ssk1", "k1/sk1/ssk2", "k2/sk1");
+        List<String> expect = List.of("k2", "k2/sk1", "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
@@ -55,8 +55,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc3() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1", "k2/sk1/ssk1", "k3/sk1/ssk1", "k3/sk1/ssk2", "k3/sk2/ssk1");
-        List<String> expect = Arrays.asList("k3", "k3/sk1", "k3/sk1/ssk1", "k3/sk1/ssk2", "k3/sk2", "k3/sk2/ssk1", "k2", "k2/sk1", "k2/sk1/ssk1", "k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k1/sk1/ssk1", "k2/sk1/ssk1", "k3/sk1/ssk1", "k3/sk1/ssk2", "k3/sk2/ssk1");
+        List<String> expect = List.of("k3", "k3/sk1", "k3/sk1/ssk1", "k3/sk1/ssk2", "k3/sk2", "k3/sk2/ssk1", "k2", "k2/sk1", "k2/sk1/ssk1", "k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
